[package]
name = "simple-frequent-itemsets"
version = "0.1.0"
edition = "2021"
authors = ["Roni Hämäläinen <roni.hamalainen@tuni.fi>"]
description = "Simple implementation of frequent itemsets algorithm."
repository = "https://github.com/RHamalainen/simple-frequent-itemsets"
readme = "README.md"
keywords = ["frequent-itemsets", "data-mining", "apriori"]
categories = ["algorithms", "science"]
license = "Apache-2.0"

[dependencies]
itertools = "*"
